objects/Krios_Employee__c.object
<CustomObject>
    <label>Krios Employee</label>
    <nameField>
        <label>Krios Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Krios Employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Emp_ID__c</fullName>
        <label>Emp ID</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Emp_Name__c</fullName>
        <label>Emp Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emp_Email__c</fullName>
        <label>Emp Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Emp_Mobile_No__c</fullName>
        <label>Emp Mobile No.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>